[package]
name = "subsrus"
version = "0.1.0"
authors = ["Luke Arntz <luke@blue42.net>"]
homepage = "https://github.com/larntz/subsrus"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
reqwest = { version = "0.10.4", features = ["blocking","json"] }
